# MyCloud-Server

./: .gitignore  CMakeLists.txt  resources.qrc
include/: appSetup.h  auth.h  dashboard.h  login.h
src/: main.cpp
src/screens/: appSetup.cpp  dashboard.cpp  login.cpp
src/services/: a.out  linuxService.cpp  serviceUtils.cpp  serviceUtils.h
src/utilities/: auth.cpp
